TRYING to fix BG issue on mobile

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -7,6 +7,8 @@
   z-index: 1042;
   overflow: hidden;
   position: fixed;
+  -webkit-backface-visibility: hidden; /*supposed to fix the problem with "fixed" on tablet*/
+
   background: #0b0b0b;
   opacity: 0.6; }
 
